// Vitest Snapshot v1

exports[`Badge component > renders 1`] = `
<div>
  <div
    class="c-dhzjXW c-QWATl c-QWATl-eUcpXf-theme-info c-QWATl-gMcPmy-size-sm"
    role="status"
  >
    <div
      class="c-PJLV c-PJLV-iguVXTk-css"
    >
      Some Text
    </div>
  </div>
</div>
`;

exports[`Badge component > renders a md size and danger theme 1`] = `
<div>
  <div
    class="c-dhzjXW c-QWATl c-QWATl-jtgfr-theme-danger c-QWATl-jFTdoT-size-md"
    role="status"
  >
    <div
      class="c-PJLV c-PJLV-iguVXTk-css"
    >
      Some Text
    </div>
  </div>
</div>
`;
